tests/ValidPrograms/Test4/test4.c

int main() {
	int a,b,c;
	a = 2;
	b = 2*a;
	c = b|a;
	return c;
}
