tests/SemanticError/Fonctions/Test1/CallNbParameters.c
int fonction(int a){
	return a;
}

int main(){
	int a;
	a=fonction(1,2);
	return a;
}
